k8s/pgadmin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: node-k8s
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
              name: pgadminport
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
