k8s/pgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: node-k8s
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
