k8s/pgadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: node-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 30080
            path: /
